Fix the main style so the star doesn't slightly overlap the text

--- a/style/mainstyle.scss
+++ b/style/mainstyle.scss
@@ -71,7 +71,7 @@ body {
         }
         height: 40vw;
         background-size: 50vw;
-        margin: 0 -4em 0 -2em;
+        margin: 0 -4rem 0 -4rem;
     }
 
     #content {
